@@ -3,7 +3,7 @@
 
 from AccessControl import ClassSecurityInfo
 
-from zope.interface import implements, directlyProvides
+from zope.interface import implements
 
 from Products.Archetypes import atapi
 from Products.ATContentTypes.content import folder
