@@ -1,5 +1,4 @@
 from zope.interface import Interface
-from zope import schema
 
 class IAddressBookView(Interface):
     """Interface for the address view
